--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Quicksand&display=swap');
 
 
 
